Return last page and bookmark with all books
