# src/BymseRead.Core/Common/Models/BookmarkInfo.cs
@@ -1,0 +1,7 @@
+namespace BymseRead.Core.Common.Models;
+
+public class BookmarkInfo
+{
+    public required int Page { get; init; }
+    public required DateTimeOffset CreatedAt { get; init; }
+}
